# Wildfire-Containment-Simulator

./: .gitattributes  .gitignore  AGENTS.md  BLOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HACKATHON_ALIGNMENT.md  LICENSE  README.md  Summary.txt  app.py  colab_prompts.md  implementation_plan.md  inference.py  openenv.yaml  prompts.md  pyproject.toml  requirements.txt  training_stats.json  yt.txt
.github/workflows/: ci.yml
agents/: __init__.py  heuristic_agent.py  random_agent.py
data/: Wildfire Grpo Training - a Hugging Face Space by Eshit.html
demos/: README.md
env/: __init__.py  action_parser.py  briefing.py  curriculum.py  fire_spread.py  grid.py  models.py  rendering.py  resources.py  reward.py  serialization.py  weather.py  wildfire_env.py
frontend/: app.js  index.html  style.css
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
scripts/: eval_compare.py  eval_trained_model.py  evaluate.py  find_demo_seed.py  generate_sft_data.py  plot_dashboard.py  plot_grpo_training.py  replay.py  results.json  run_demo.py
server/: __init__.py  app.py
tests/: conftest.py  test_action_parser.py  test_briefing.py  test_curriculum.py  test_dashboard.py  test_eval_compare.py  test_graders.py  test_rendering.py  test_reward.py  test_serialization.py  test_server_routes.py  test_smoke.py
training/: README.md  grpo_colab.ipynb  grpo_eval_results.json  grpo_v2_colab.ipynb  requirements.txt  sft_colab.ipynb  synthetic_stats_demo.json  test_notebook_imports.py  training_stats.json
(+5 files in other folders)
