[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-containment-simulator"
version = "1.0.0"
description = "Grid-based wildfire containment RL environment (OpenEnv Finale — Theme 2)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "openai>=1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "matplotlib>=3.7",
    "imageio>=2.28",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
server = "server.app:main"
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "agents*", "graders*", "scripts*", "server*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
